# infinity

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.js
client/: cranker.mjs  deploy-v2.sh  indexer.mjs  infinity.mjs  launch-test.mjs  mainnet-smoke.mjs  mainnet-trade.mjs  metadata-test.mjs  metadata.mjs  migrate-pools.mjs  package.json  smoke.mjs  sniper-test.mjs
marketing/: video-30s.md
program/: Anchor.toml  Cargo.toml
program/programs/infinity-amm/: Cargo.toml
program/programs/infinity-amm/src/: curve.rs  errors.rs  lib.rs  state.rs
src/: App.jsx  data.js  main.jsx  polyfills.js  styles.css  zoneBus.js
src/chain/: WalletProvider.jsx  config.js  display.js  infinity.js  jupiter.js  launch.js  metadata.js  tokens.js  useIndexer.js  useInfinity.js  useSolPrice.js  useTokenMeta.js
src/components/: ConnectButton.jsx  CurvedTicker.jsx  Header.jsx  InAppBrowserBanner.jsx  InfinityGlyph.jsx  MobileNav.jsx  SolLogo.jsx  StatsPanel.jsx  TokenTag.jsx
src/three/: Scene.jsx  coinTextures.js
src/zones/: Claim.jsx  Docs.jsx  Home.jsx  Launch.jsx  Pools.jsx  Swap.jsx  Token.jsx
