[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# size-optimized: the deployed binary must fit the existing programdata
# allocation, and smaller binaries mean cheaper upgrade buffers
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
